--- a/ConsoleApplication3/ConsoleApplication3/ConsoleApplication3.vcxproj
+++ b/ConsoleApplication3/ConsoleApplication3/ConsoleApplication3.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ConsoleApplication3.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
